<resources>
    <string name="app_name">社区头条</string>

    <!--登陆界面-->
    <string name="zhanghao">账号（手机号）</string>
    <string name="mima">密码</string>
    <string name="zhuce">注册新的账号</string>
    <string name="zhuce_toolbar">注册</string>
    <string name="zhaohuimima">忘记密码？</string>
    <string name="zhaohui">找回密码</string>
    <string name="shouji">手机号</string>
    <string name="yanzhengma">验证码</string>
    <string name="chongshemima">重设密码</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="daojishi">s后重新获取</string>
    <string name="chongxinhuoqu">重新获取</string>
    <string name="xinmima">新密码</string>
    <string name="tongyi">注册即表示您同意</string>
    <string name="tiaokuan">《用户使用条款》</string>
    <string name="login_kong">账号或密码不能为空</string>
    <string name="login_service">服务器异常</string>
    <string name="zhuce_success">注册成功</string>
    <string name="login_cunzai">账号已存在</string>
    <string name="login_mima_error">账号或密码错误</string>
    <string name="login_success">欢迎，</string>
    <string name="zhuce_mima">密码（只能是数字和字母）</string>
    <string name="filter_vcode_moible">0123456789</string>
    <string name="zhuce_xiao">密码不得小于6位</string>
    <string name="zhuce_11">请正确填写11位数手机号</string>
    <string name="filter_vcode_pwd">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>


    <string name="dingwei">定位</string>
    <string name="login">登录</string>
    <string name="xingtong">系统发布</string>
    <string name="more">更多精彩>></string>
    <string name="share">分享</string>
    <string name="zheye">主页</string>
    <string name="bankuai">版块</string>
    <string name="yangzi_daohang">智服</string>
    <string name="gexing">个性</string>
    <string name="wode">个人中心</string>
    <string name="meirijingxuan">每日精选</string>
    <string name="fanhui">返回</string>
    <string name="xiangqing">新闻详情</string>
    <string name="jubao">举报</string>
    <string name="remenpinglun">热门评论</string>
    <string name="gengduopinglun">更多评论>></string>
    <string name="woyaopinglun">我也要评论</string>
    <string name="jinritiezi">今日帖子:</string>
    <string name="tiezizongshu">帖子总数:</string>
    <string name="today">今日</string>
    <string name="yestoday">昨日</string>
    <string name="wangrixinwen">往日新闻</string>
    <string name="grzx">个人中心</string>
    <string name="wodeziliao">我的资料</string>
    <string name="wodehaoyou">我的好友</string>
    <string name="wodetiezi">我的帖子</string>
    <string name="zhanneixin">站内信</string>
    <string name="yinsishezhi">隐私设置</string>
    <string name="xitongxinxi">系统信息</string>
    <string name="dengji">等级</string>
    <string name="xingming">姓名</string>
    <string name="nicheng">昵称</string>
    <string name="xingbie">性别</string>
    <string name="chushengnianyue">出生年月</string>
    <string name="city">所在城市</string>
    <string name="zhuzhi">住址</string>
    <string name="xiugaishouji">修改手机</string>
    <string name="mimafuwu">密码服务</string>
    <string name="wdzl">我的资料</string>
    <string name="wodeguanzhu">我的关注</string>
    <string name="wodehuifu">我的回复</string>
    <string name="yikanguo">已看过</string>
    <string name="weikanguo">未看过</string>
    <string name="huifu">回复</string>
    <string name="shanchu">删除</string>
    <string name="chakansuoyou">查看所有回复</string>
    <string name="quxiao">取消</string>
    <string name="bukantadetiezi">不看他(她)的帖子</string>
    <string name="xuanzeduixiang">选择对象</string>
    <string name="aboutus">关于我们</string>
    <string name="version">版本</string>
    <string name="xtgx">系统更新</string>
    <string name="tuichu">退出</string>
    <string name="wancheng">完成</string>
    <string name="shangchuan">上传图片签名</string>
    <string name="tip">图片签名建议比例5:1,1M以下</string>
    <string name="tupianlianjie">图片链接</string>
    <string name="weixin">微信好友</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="qqkongjian">QQ空间</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="shuaxin">刷新</string>
    <string name="fuzhilianjie">复制链接</string>
    <string name="fasong">发送</string>
    <string name="ziliao">资料</string>
    <string name="TAtiezi">TA的帖子</string>
    <string name="quanbupinglun">全部评论</string>
    <string name="gexingqianming">个性签名</string>
    <string name="bankuaishouye">版块首页</string>
    <string name="jinri">今日:</string>
    <string name="huati">话题:</string>
    <string name="sousuo">搜索</string>
    <string name="jinqiredian">近期热点</string>
    <string name="fatie">发帖</string>
    <string name="biaoti">标题...</string>
    <string name="zhengwen">正文...</string>
    <string name="xuanzebankuai">选择发布版块</string>
    <string name="fabu">发布</string>
    <string name="zuixin">最新</string>
    <string name="quanbu">全部</string>
    <string name="remen">热门</string>
    <string name="shanchu_tiezi">你确定要删除所选帖子？</string>
    <string name="queding">确定</string>

    <!--个人中心-->
    <string name="gerenjifen">个人积分：</string>
    <string name="jifenduihuan">积分兑换</string>
    <string name="wodedingdan">我的订单</string>
    <string name="chakanquanbudingdan">查看全部订单></string>
    <string name="daifukuan">待付款</string>
    <string name="daifahuo">待发货</string>
    <string name="daishouhuo">待收货</string>
    <string name="shouhoutuikuan">售后退款</string>
    <string name="quxiaodingdan">取消订单</string>
    <string name="shenqingtuikuan">申请退款</string>
    <string name="jiazaishibai">加载失败，请检查您当前的网络环境！</string>
    <string name="keyi">您可以点击按钮重新加载</string>
    <string name="chongxinjiazai">重新加载</string>
    <string name="fuwuqicuowu">服务器错误，请稍后重试</string>
    <string name="grzx_bianji">编辑</string>
    <string name="grzx_sex_man">男</string>
    <string name="grzx_sex_woman">女</string>
    <string name="tishi">提示</string>
    <string name="baocun">保存</string>
    <string name="grzx_xiugai">点击 确定 将保存您的修改</string>
    <string name="grzx_fanhui">您可能还未保存数据，如果返回将不会对您的数据进行任何修改，确定要返回么？</string>
    <string name="grzx_no_network">网络不给力啊</string>
    <string name="grzx_jifenduihuan">暂未开放积分兑换</string>
    <string name="grzx_wei_login">您还未登录</string>

    <!--个性签名-->
    <string name="gxqm_tuiguang">推广图片请联系客服人员上传</string>

    <!--商品详情-->
    <string name="goumaishuliang">购买数量：</string>
    <string name="leijixiaoshou">累计销售：</string>
    <string name="shangpinxiangqing">商品详情</string>
    <string name="shouhuoren">收货人</string>
    <string name="lianxidianhua">联系电话</string>
    <string name="sheng_shi_qu">省--市--区</string>
    <string name="sheng">省</string>
    <string name="shi">市</string>
    <string name="qu">区</string>
    <string name="xiangxidizhi">详细地址</string>
    <string name="yunfei">运费：</string>
    <string name="heji">合计：</string>
    <string name="tijiaodingdan">提交订单</string>
    <string name="xuanze_sheng">选择省</string>
    <string name="xuanze_shi">选择市</string>
    <string name="xuanze_qu">选择区</string>

    <!--分享出去之前的设置广告页面-->
    <string name="tuiguang">广告推广</string>
    <string name="shangpin">商品推广</string>
    <string name="querenfenxiang">确认分享</string>
    <string name="tuiguang_xinxi">(设置一次之后,每次分享都会带上你的广告)</string>
    <string name="xinxi02">(分享一下广告,赚取积分,兑换现金)</string>
    <string name="jifenzhi">积分值:</string>
    <string name="yifenxiang_num">人已分享</string>

    <!--新闻详情-->
    <string name="xinwen_source">新闻来源：</string>
    <string name="xinwen_pinglun_tishi">您还未登录，赶快去登录,再来发表您的高见吧！</string>
    <string name="xinwen_fenxiang_tishi">您还未登录，赶快去登录，再来分享吧！</string>
    <string name="xinwen_qu_denglun">知道了</string>
    <string name="xinwen_quxiao">算了</string>
    <string name="xinwen_service">服务器异常</string>
    <string name="xinwen_no_net">网络不给力啊</string>
    <string name="xinwen_pinglun_success">评论成功</string>
    <string name="xinwen_pinglun_shibai">服务器异常，评论失败</string>

    <!--系统信息-->
    <string name="xtxx_about">后续会更新关于我们的第一手资料</string>
    <string name="xtxx_banben">已是最新版本</string>
    <string name="xtxx_gengxin">目前无需更新</string>
    <string name="xtxx_exit">您确定要退出程序么？</string>


    <!--微博-->
    <string name="weibosdk_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="weiboapp_not_installed">您还未安装微博客户端</string>
    <string name="weibosdk_toast_share_success">分享成功</string>
    <string name="weibosdk_toast_share_canceled">分享取消</string>
    <string name="weibosdk_toast_share_failed">分享失败</string>


    <!--微信-->
    <string name="wxsdk_toast_share_success">分享成功</string>
    <string name="wxsdk_toast_share_canceled">分享取消</string>
    <string name="wxsdk_toast_share_failed">分享失败</string>
    <string name="wxapp_not_installed">请先安装微信客户端</string>


    <!--QQ-->
    <string name="qqsdk_toast_share_success">分享成功</string>
    <string name="qqsdk_toast_share_canceled">分享取消</string>
    <string name="qqsdk_toast_share_failed">分享失败</string>

</resources>
