<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbar_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/xnx_dialog_huifu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/huifu"
        android:textColor="@color/daohang"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_divider"
        android:background="@color/main_background"/>

    <TextView
        android:id="@+id/xnx_dialog_shanchu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/shanchu"
        android:textColor="@color/daohang"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_divider"
        android:background="@color/main_background"/>

    <TextView
        android:id="@+id/xnx_dialog_chakan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/chakansuoyou"
        android:textColor="@color/daohang"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_divider"
        android:background="@color/main_background"/>

    <TextView
        android:id="@+id/xnx_dialog_quxiao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/quxiao"
        android:textColor="@color/daohang"
        android:textSize="20dp"/>

</LinearLayout>